# otp-client

./: CMakeLists.txt  README.md  main.c
include/: clipboard.h  otp.h
